compatibility, configuration and cleanups
- ADD: Func<T1, T2, T3, T4, T5, TResult> for pre .NET 4 systems
- ADD: ConfigRepositoryWrapper classes
- CHG: added switch to ConfigRepositoryBase that decides if that class
and its sub classes handle thread safe or not

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ComponentModel\ReceiveNotificationFromOptions.cs" />
     <Compile Include="Configuration\ConfigRepositoryBase.cs" />
     <Compile Include="Configuration\IConfigRepository.cs" />
+    <Compile Include="Configuration\ConfigRepositoryWrapper.cs" />
     <Compile Include="Configuration\Impl\JsonFileConfigRepository.cs" />
     <Compile Include="Configuration\Impl\KeyValuePairConfigRepository.cs" />
     <Compile Include="Configuration\Impl\IniFileConfigRepository.cs" />
