--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,5 @@ Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox.v12.suo
 /Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/obj
 /Projects/MarcelJoachimKloubert.Sandbox/MarcelJoachimKloubert.Sandbox/bin
 MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj.user
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ShredderPlugIn/obj
+/Projects/MarcelJoachimKloubert.DragNBatch/MarcelJoachimKloubert.DragNBatch.PlugIns.ShredderPlugIn/bin
