--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -135,9 +135,11 @@
     </Compile>
     <Compile Include="Diagnostics\Impl\ConsoleLogger.cs" />
     <Compile Include="Diagnostics\Impl\DummyLogger.cs" />
+    <Compile Include="Diagnostics\Impl\EventLogger.cs" />
     <Compile Include="Diagnostics\Impl\FallbackLogger.cs" />
     <Compile Include="Diagnostics\Impl\TextWriterLogger.cs" />
     <Compile Include="Diagnostics\Impl\WorkflowLogger.cs" />
+    <Compile Include="Diagnostics\LogMessageEventArgs.cs" />
     <Compile Include="Diagnostics\Tests\Assert.AreSame.cs">
       <DependentUpon>Assert.cs</DependentUpon>
     </Compile>
