--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -360,8 +360,14 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ErrorHandlerBase.cs">
       <Link>ErrorHandlerBase.cs</Link>
     </Compile>
-    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\CommandBase.cs">
-      <Link>Execution\CommandBase.cs</Link>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\commands\CommandBase.cs">
+      <Link>Execution\Commands\CommandBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\commands\ICommand.cs">
+      <Link>Execution\Commands\ICommand.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\commands\impl\DelegateCommand.cs">
+      <Link>Execution\Commands\Impl\DelegateCommand.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ExecutionErrorEventArgs.cs">
       <Link>Execution\ExecutionErrorEventArgs.cs</Link>
@@ -387,12 +393,6 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\IAsyncExecutionResult.cs">
       <Link>Execution\IAsyncExecutionResult.cs</Link>
-    </Compile>
-    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\ICommand.cs">
-      <Link>Execution\ICommand.cs</Link>
-    </Compile>
-    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\execution\impl\DelegateCommand.cs">
-      <Link>Execution\Impl\DelegateCommand.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\SimpleAsyncExecutionResult.cs">
       <Link>Execution\SimpleAsyncExecutionResult.cs</Link>
