--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -403,6 +403,15 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\IAsyncExecutionResult.cs">
       <Link>Execution\IAsyncExecutionResult.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\AsyncJobScheduler.cs">
+      <Link>Execution\Jobs\AsyncJobScheduler.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\IJob.cs">
+      <Link>Execution\Jobs\IJob.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\JobScheduler.cs">
+      <Link>Execution\Jobs\JobScheduler.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Execution\SimpleAsyncExecutionResult.cs">
       <Link>Execution\SimpleAsyncExecutionResult.cs</Link>
     </Compile>
