--- a/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
@@ -88,6 +88,12 @@
       <Link>Data\ValueConverterBase.Interface.cs</Link>
       <DependentUpon>ValueConverterBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35.WPF\Execution\Jobs\AsyncDispatcherJobScheduler.cs">
+      <Link>Execution\Jobs\AsyncDispatcherJobScheduler.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\execution\jobs\DispatcherJobScheduler.cs">
+      <Link>Execution\Jobs\DispatcherJobScheduler.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.35.wpf\extensions\ClrToolboxWpfExtensionMethods.cs">
       <Link>Extensions\ClrToolboxWpfExtensionMethods.cs</Link>
     </Compile>
