--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
@@ -1591,6 +1591,15 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Commands\Impl\DelegateCommand.cs">
       <Link>Execution\Commands\Impl\DelegateCommand.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\IJob.cs">
+      <Link>Execution\Jobs\IJob.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\JobScheduler.cs">
+      <Link>Execution\Jobs\JobScheduler.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\AsyncJobScheduler.cs">
+      <Link>Execution\Jobs\AsyncJobScheduler.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -1625,5 +1634,6 @@
     <Folder Include="Execution\Workflows\Impl\" />
     <Folder Include="_Embedded\MarkdownSharp\" />
     <Folder Include="Execution\Commands\" />
+    <Folder Include="Execution\Jobs\" />
   </ItemGroup>
 </Project>
