jobs, extension methods and code cleanups
- ADD: Dispatcher property to DispatcherJobScheduler
- ADD: Invoke() extension method for DispatcherObject based classes
- CHG: code cleanups

--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Execution\Jobs\DispatcherJobScheduler.cs" />
     <Compile Include="Extensions\ClrToolboxWpfExtensionMethods.cs" />
     <Compile Include="Extensions\Dispatcher.cs" />
+    <Compile Include="Extensions\Dispatcher.Invoke.cs">
+      <DependentUpon>Dispatcher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\Imaging.cs" />
     <Compile Include="Extensions\Imaging.SaveAsBmp.cs">
       <DependentUpon>Imaging.cs</DependentUpon>
