--- a/MarcelJoachimKloubert.CLRToolbox.40.WinForms/MarcelJoachimKloubert.CLRToolbox.40.WinForms.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40.WinForms/MarcelJoachimKloubert.CLRToolbox.40.WinForms.csproj
@@ -52,6 +52,12 @@
       <Link>Controls\BorderlessMoveableForm.cs</Link>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20.winforms\execution\jobs\AsyncWinFormsJobScheduler.cs">
+      <Link>Execution\Jobs\AsyncWinFormsJobScheduler.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20.winforms\execution\jobs\WinFormsJobScheduler.cs">
+      <Link>Execution\Jobs\WinFormsJobScheduler.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20.winforms\helpers\WinFormsHelper.cs">
       <Link>Helpers\WinFormsHelper.cs</Link>
     </Compile>
