--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono4/MarcelJoachimKloubert.CLRToolbox.Mono4.csproj
@@ -1618,6 +1618,18 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\IJobScheduler.cs">
       <Link>Execution\Jobs\IJobScheduler.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Sessions\ISession.cs">
+      <Link>Sessions\ISession.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Sessions\SimpleSession.cs">
+      <Link>Sessions\SimpleSession.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\ComponentModel\ReceiveValueFromAttribute.cs">
+      <Link>ComponentModel\ReceiveValueFromAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\ComponentModel\ReceiveValueFromOptions.cs">
+      <Link>ComponentModel\ReceiveValueFromOptions.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -1644,7 +1656,6 @@
     <Folder Include="Timing\" />
     <Folder Include="Values\" />
     <Folder Include="_Compatibility\" />
-    <Folder Include="ComponentModel\ComponentModel\" />
     <Folder Include="Diagnostics\Remoting\" />
     <Folder Include="_Embedded\" />
     <Folder Include="Execution\Workflows\" />
@@ -1653,5 +1664,6 @@
     <Folder Include="_Embedded\MarkdownSharp\" />
     <Folder Include="Execution\Commands\" />
     <Folder Include="Execution\Jobs\" />
+    <Folder Include="Sessions\" />
   </ItemGroup>
 </Project>
