--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -84,6 +84,8 @@
     <Compile Include="ComponentModel\NotificationObjectBase.cs" />
     <Compile Include="ComponentModel\ReceiveNotificationFromAttribute.cs" />
     <Compile Include="ComponentModel\ReceiveNotificationFromOptions.cs" />
+    <Compile Include="ComponentModel\ReceiveValueFromAttribute.cs" />
+    <Compile Include="ComponentModel\ReceiveValueFromOptions.cs" />
     <Compile Include="Configuration\ConfigRepositoryBase.cs" />
     <Compile Include="Configuration\IConfigRepository.cs" />
     <Compile Include="Configuration\ConfigRepositoryWrapper.cs" />
@@ -667,6 +669,8 @@
     <Compile Include="ServiceLocation\ServiceLocatorBase.ParseValue.cs">
       <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sessions\ISession.cs" />
+    <Compile Include="Sessions\SimpleSession.cs" />
     <Compile Include="Templates\ITemplate.cs" />
     <Compile Include="Templates\TemplateBase.cs" />
     <Compile Include="Templates\Text\Html\HtmlTemplateBase.cs" />
