--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -170,6 +170,9 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Configuration\ReadOnlyConfigRepositoryWrapper.cs">
       <Link>Configuration\ReadOnlyConfigRepositoryWrapper.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\CryptoRandom.cs">
+      <Link>CryptoRandom.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\CommonConverter.cs">
       <Link>Data\CommonConverter.cs</Link>
     </Compile>
