--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -604,6 +604,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\IResourceLocator.cs" />
     <Compile Include="Resources\ResourceRootNamespaceAttribute.cs" />
+    <Compile Include="CryptoRandom.cs" />
     <Compile Include="Scripting\CommonScriptFunctionSetup.cs" />
     <Compile Include="Scripting\Export\ExportScriptFuncAttribute.cs" />
     <Compile Include="Scripting\Export\ExportScriptTypeAttribute.cs" />
