--- a/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.Mono/MarcelJoachimKloubert.CLRToolbox.Mono2/MarcelJoachimKloubert.CLRToolbox.Mono2.csproj
@@ -1389,5 +1389,8 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\CryptoRandom.cs">
       <Link>CryptoRandom.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Execution\Jobs\JobBase.cs">
+      <Link>Execution\Jobs\JobBase.cs</Link>
+    </Compile>
   </ItemGroup>
 </Project>
